2016-10-11  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-545

	* src/montecarlo.cc (mcPathTraceGeneral): My last commit made MC
	to crash for stokes_dim = 1. Mixed up 0 and 1-based indexing in
	one place!

2016-10-11  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-544

	* src/montecarlo.cc (mcPathTraceGeneral): Code added that allows
	setting a limit on each path step in terms of optical thickness.
	Thsi feature is being tested. In this commit tau limit is
	hard-coded to 100, which maintains the old behaviour except for
	extreme situations.

	* controlfiles/general/agendas_surface.arts: Removed za_pos=0.5
	from definitions including surfaceLambertianSimple. This is anyhow
	default for the method. In addition, standard agenda definitions
	should use method default values, otherwise we have basically two
	different default settings.

	* src/methods.cc: For surfaceLambertianSimple, moved
	lambertian_nza from IN to GIN. The value 9 was selected as default.

	* src/workspace.cc: Removed lambertian_nza as WSV. Semmed
	unnecessary to have such a specific variable as WSV.

2016-10-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-543

	* Some preperations to introduce an additional feature in MC:

	* src/m_fos.cc (fos, iyFOS):
	* src/m_montecarlo.cc:
	* src/montecarlo.cc (mcPathTraceGeneral):
	* src/rte.cc (defocusing_general_sub, defocusing_general)
	(defocusing_sat2sat):
	* src/m_transmitter.cc (iyRadioLink, iyTransmissionStandard):
	* src/m_rte.cc (iyEmissionStandard, iyMC):
	* src/m_cloudradar.cc (iyCloudRadar):
	* src/m_doit.cc (doit_i_fieldUpdate1D, doit_i_fieldUpdateSeq1D)
	(doit_i_fieldUpdateSeq3D):
	* src/doit.cc (cloud_ppath_update1D, cloud_ppath_update1D_noseq)
	(cloud_ppath_update3D):
	* src/ppath.cc (ppath_calc):
	* src/m_ppath.cc (ppathCalc, ppathFromRtePos2, ppathStepByStep):

	Adopted to change below. That is, ppath_lmax has been added.

	* src/agendas.cc (define_agenda_data): Added ppath_lmax as input